--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ avatar:
 footer-links:
   dribbble:
   email: minhnnguyen1402@gmail.com
-  facebook:
+  facebook: Minh Nguyen
   flickr:
   github: mnguy348
   instagram: @_minhnnguyen_
-  linkedin:
+  linkedin: minh-nguyen1402
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
