--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Biochemistry Undergrad at Cal Poly Uiversity
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # To use the Cal Poly Learn by Doing logo put https://raw.githubusercontent.com/[username]/[website_name]/master/images/CP_LBD.jpg
 # But fill in your actual username and website name
-avatar: https://github.com/mnguy348/mnguy348.github.io/blob/master/images/CP_LBD.jpg
+avatar: 
 
 #
 # Flags below are optional
@@ -24,7 +24,7 @@ footer-links:
   facebook: Minh Nguyen
   flickr:
   github: mnguy348
-  instagram: @_minhnnguyen_
+  instagram: _minhnnguyen_
   linkedin: minh-nguyen1402
   pinterest:
   rss: # just type anything here for a working RSS icon
