--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Biochemistry Undergrad at Cal Poly Uiversity
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 # To use the Cal Poly Learn by Doing logo put https://raw.githubusercontent.com/[username]/[website_name]/master/images/CP_LBD.jpg
 # But fill in your actual username and website name
-avatar: 
+avatar: https://github.com/mnguy348/mnguy348.github.io/blob/master/images/CP_LBD.jpg
 
 #
 # Flags below are optional
