--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ avatar: https://github.com/mnguy348/mnguy348.github.io/blob/master/images/CP_LBD
 footer-links:
   dribbble:
   email: minhnnguyen1402@gmail.com
-  facebook: Minh Nguyen
+  facebook: minhnnguyen1402
   flickr:
   github: mnguy348
   instagram: _minhnnguyen_
