--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Minh Nguyen
+name: Minh Ngoc Nguyen
 
 # Short bio or description (displayed in the header)
 description: Biochemistry Undergrad at Cal Poly Uiversity
